tests/ixml_not_001_simple_prefix.test
START
book = !"chapter", [L]+.
INPUT
chapterchopper
OUTPUT
ixml:1:1: syntax error
chapterchopper
^
END
